--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
                 Font: verdana
             </li>
             <li class="helvetica">
-                Font: helvetica
-            </li>
-            <li class="comicsans">
-                Font: comicsans
+                Font: helvetica!!!
             </li>
         </ul>
+        <strong>Warning!</strong>
+        <strong>Danger!</strong>
+        <strong>Info!</strong>
+        <strong>Success!</strong>
     </div>
 </body>
